--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.blur_off {
+  -webkit-filter: blur(30px); -moz-filter: blur(30px);
+  -o-filter: blur(30px); -ms-filter: blur(30px); 
+  filter: url(#blur); filter: blur(30px);  filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='3');
+  -webkit-transition: 2s -webkit-filter linear;
+  -o-transition: 2s -o-filter linear;
+}
+
+.blur_on :hover  { 
+  -webkit-filter: blur(0px); -moz-filter: blur(0px); -o-filter: blur(0px); -ms-filter: blur(0px);
+  filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='0'); filter: blur(0px); 
+}
