--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,46 @@
 .App {
   text-align: center;
+  width: 100%;
+  max-width:initial;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App .canvas_wrapper {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: fixed;
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 2"><path d="M1 2V0h1v1H0v1z" fill-opacity=".025"/></svg>');
+  background-size: 20px 20px;
+}
+.App > canvas{
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: fixed;
+}
+ 
+.upload-btn-wrapper {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.btn {
+  border: 2px solid gray;
+  color: gray;
+  background-color: white;
+  padding: 8px 20px;
+  border-radius: 8px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.upload-btn-wrapper input[type=file] {
+  font-size: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
 }
 
 @media (prefers-reduced-motion: no-preference) {
