--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,9 +20,22 @@
 }
  
 .upload-btn-wrapper {
-  position: relative;
+  position: absolute;
   overflow: hidden;
+  right: 0;
+  top: 0;
   display: inline-block;
+  padding: 10vh;
+  z-index: 10000;
+}
+
+.download-btn-wrapper {
+  position: absolute;
+  overflow: hidden;
+  right: 500px;
+  top: 500px;
+  display: inline-block;
+  z-index: 10000;
 }
 
 .btn {
