--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,11 +4,11 @@
   max-width:initial;
 }
 
-.App .canvas_wrapper {
+.App .canvas_editor_wrapper {
   width: 100%;
   height: 100%;
   display: block;
-  position: fixed;
+  float: left;
   background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 2"><path d="M1 2V0h1v1H0v1z" fill-opacity=".025"/></svg>');
   background-size: 20px 20px;
 }
@@ -18,23 +18,29 @@
   display: block;
   position: fixed;
 }
- 
+
+.App .toolbar { 
+
+  width: 50vh;
+  height: 100%;
+  position: fixed;
+  top:0px;
+  right: 0px;
+  z-index: 10000;
+}
 .upload-btn-wrapper {
-  position: absolute;
   overflow: hidden;
   right: 0;
   top: 0;
-  display: inline-block;
   padding: 10vh;
   z-index: 10000;
 }
 
 .download-btn-wrapper {
-  position: absolute;
   overflow: hidden;
-  right: 500px;
-  top: 500px;
-  display: inline-block;
+  right: 0;
+  top: 0;
+  padding: 10vh;
   z-index: 10000;
 }
 
